// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-11ci2py"
    >
      <a
        class="flex-none"
        href="#/album/3879801547"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-11ci2py"
      >
        <span
          class="title svelte-11ci2py"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="artist underlined svelte-11ci2py"
          href="#/artist/756100103"
        >
          Ben Harper
        </a>
      </div>
       
    </div>
  </div>
</section>
`;

exports[`Storyshots Components/Track With Details 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <div
      class="undefined root svelte-11ci2py"
    >
      <a
        class="flex-none"
        href="#/album/3879801547"
      >
        <img
          alt="./cover.jpg"
          class="h-16 w-16 text-xs svelte-hn7eai rounded-sm"
          loading="lazy"
          src="./cover.jpg#nonce=0.1"
        />
         
        
      </a>
       
      <div
        class="track svelte-11ci2py"
      >
        <span
          class="title svelte-11ci2py"
        >
          Mama got a girlfriend
        </span>
         
        <a
          class="artist underlined svelte-11ci2py"
          href="#/artist/756100103"
        >
          Ben Harper
        </a>
      </div>
       
      <div
        class="duration svelte-11ci2py"
      >
        2:06
      </div>
    </div>
  </div>
</section>
`;
